优化文件管理模块